[package]
name = "ntex-rest-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.6.7", features = ["tokio"] }
serde = { version = "1.0.163", features = ["derive"] }
utoipa-swagger-ui = "3.1.3"
